[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Simple_Platformer/8x8/Enemies/slime1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Simple_Platformer/8x8/Enemies/slime2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Southwold/mobs/Slime.gd" type="Script" id=3]
[ext_resource path="res://audio/mobhit.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 2.9 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50, 20 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4.3, 3.3 )

[node name="Slime" type="KinematicBody2D" groups=[
"Mob",
]]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.9 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 5, 0 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 2.38419e-07, 1.0267 )
scale = Vector2( 0.4, 0.29733 )
process_parent = true
physics_process_parent = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Sight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 0.9 )
shape = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Sight" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
